--- a/Versiones/1PrubaSinTkinter/tareas.json
+++ b/Versiones/1PrubaSinTkinter/tareas.json
@@ -3,5 +3,10 @@
         "name": "tarea1",
         "estado": "Pendiente",
         "numero": 4
+    },
+    {
+        "name": "Holadsad",
+        "estado": "Pendiente",
+        "numero": 7
     }
 ]
