--- a/Data/tareas.json
+++ b/Data/tareas.json
@@ -1,5 +1,15 @@
 [
     {
+        "tarea": "sdas",
+        "fecha": "Sin definir",
+        "completada": "Completada"
+    },
+    {
+        "tarea": "hola",
+        "fecha": "Sin definir",
+        "completada": "Pendiente"
+    },
+    {
         "tarea": "hola",
         "fecha": "Sin definir",
         "completada": "Completada"
@@ -13,5 +23,25 @@
         "tarea": "dasd",
         "fecha": "Sin definir",
         "completada": "Completada"
+    },
+    {
+        "tarea": "nb",
+        "fecha": "Sin definir",
+        "completada": "Pendiente"
+    },
+    {
+        "tarea": "asdsad",
+        "fecha": "Sin definir",
+        "completada": "Pendiente"
+    },
+    {
+        "tarea": "asdasd",
+        "fecha": "Sin definir",
+        "completada": "Pendiente"
+    },
+    {
+        "tarea": "asdas",
+        "fecha": "Sin definir",
+        "completada": "Pendiente"
     }
 ]
